Align range address filters and tag UX with ip-assets

--- a/app/templates/partials/range_addresses_table.html
+++ b/app/templates/partials/range_addresses_table.html
@@ -80,7 +80,7 @@
             <button
               class="tag tag-color tag-filter-chip"
               type="button"
-              data-range-quick-filter="q"
+              data-range-quick-filter="tag"
               data-range-quick-filter-value="{{ tag.name }}"
               style="--tag-color: {{ tag.color }}"
             >
